dbeaver/pro#7739 Fix project ordering in new project selector combo